# StreamMath

./: CMakeLists.txt  Data.cpp  Data.hpp  HandleWidget.cpp  README.md  Settings.cpp  Settings.hpp  mainwindow.hpp
Settings/: settings.json
Widgets/: HandleWidget.cpp  HandleWidget.hpp  MainWindow.cpp  ProgressBar.cpp  ProgressBar.hpp
